--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">NutritionApp</string>
+    <string name="sample_text1">You are in the Diary Tab.</string>
+    <string name="sample_text2">You are in the Stats Tab.</string>
+    <string name="action_settings">Settings</string>
 </resources>
