--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="milkTitle">Milk and Alternatives</string>
     <string name="meatTitle">Meat and Alternatives</string>
     <string name="addButtonTitle">Add</string>
+    <string name="outOfSix">out of 6</string>
+    <string name="outOfTwo">out of 2</string>
 </resources>
