--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="addButtonTitle">Add</string>
     <string name="outOfSix">out of 6</string>
     <string name="outOfTwo">out of 2</string>
+    <string name="datePickTitle">Choose date:</string>
 </resources>
